Closed
Bug 727601
Opened 14 years ago
Closed 14 years ago
"ASSERTION: Only transformed frames should have UpdateTransformLayer hint" with display:table
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla13
People
(Reporter: jruderman, Assigned: MatsPalmgren_bugz)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, regression, testcase)
Attachments
(3 files)
###!!! ASSERTION: Only transformed frames should have UpdateTransformLayer hint: '!(aChange & nsChangeHint_UpdateTransformLayer) || aFrame->IsTransformed()', file layout/base/nsCSSFrameConstructor.cpp, line 7719
I guess the patch in bug 725535 didn't fix this case?
Reporter | ||
Comment 1•14 years ago
|
||
Assignee | ||
Comment 2•14 years ago
|
||
It's the inner TableFrame that cause the assertion.
The TableOuterFrame has IsTransformed() == true, the inner TableFrame does not.
We don't propagate nsChangeHint_UpdateTransformLayer, but the TableFrame
is the style provider, and is the child so we recurse on line 1153:
http://mxr.mozilla.org/mozilla-central/source/layout/base/nsFrameManager.cpp#1133
and it comes back with UpdateOverflow | UpdateTransformLayer and we add that
to the change list...
When we process that change, we assert because while the style HasTransform()
the TableFrame explicitly disables transforms by removing NS_FRAME_MAY_BE_TRANSFORMED:
http://mxr.mozilla.org/mozilla-central/source/layout/tables/nsTableFrame.cpp#217
Assignee | ||
Comment 3•14 years ago
|
||
Assignee: nobody → matspal
Attachment #599456 -
Flags: review?(roc)
Attachment #599456 -
Flags: review?(roc) → review+
Assignee | ||
Comment 4•14 years ago
|
||
Flags: in-testsuite+
Whiteboard: [inbound]
Target Milestone: --- → mozilla13
Comment 5•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
You need to log in
before you can comment on or make changes to this bug.
Description
•