Bug 727601 - "ASSERTION: Only transformed frames should have UpdateTransformLayer hint" with display:table.  r=roc